SFDC Automation/src/objects/Customer_Life_Cycle__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Life Cycle</relationshipLabel>
        <relationshipName>Customer_Life_Cycle_Contact</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Anniversary__c</fullName>
        <label>Customer Anniversary</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Branch_Name__c</fullName>
        <label>Customer Branch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Count__c</fullName>
        <label>Vehicle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Life Cycle</label>
    <nameField>
        <label>Customer Life Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Life Cycle</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>